fix searchbar alignment on firefox

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -120,6 +120,7 @@ body
           font-size: 15px
   #search-bar
     margin-bottom: 0
+    float: left
     button
       background-color: transparent
       color: white
